src/parser/parser.output
Grammar

    0 $accept: values $end

    1 values: value_list

    2 value_list: number_list
    3           | value_list SEMICOLON number_list
    4           | value_list SEMICOLON

    5 number_list: NUMBER
    6            | number_list COMMA NUMBER
    7            | number_list COMMA


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 3 4
COMMA (259) 6 7
NUMBER (260) 5 6


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
values (7)
    on left: 1, on right: 0
value_list (8)
    on left: 2 3 4, on right: 1 3 4
number_list (9)
    on left: 5 6 7, on right: 2 3 6 7


state 0

    0 $accept: . values $end

    NUMBER  shift, and go to state 1

    values       go to state 2
    value_list   go to state 3
    number_list  go to state 4


state 1

    5 number_list: NUMBER .

    $default  reduce using rule 5 (number_list)


state 2

    0 $accept: values . $end

    $end  shift, and go to state 5


state 3

    1 values: value_list .
    3 value_list: value_list . SEMICOLON number_list
    4           | value_list . SEMICOLON

    SEMICOLON  shift, and go to state 6

    $default  reduce using rule 1 (values)


state 4

    2 value_list: number_list .
    6 number_list: number_list . COMMA NUMBER
    7            | number_list . COMMA

    COMMA  shift, and go to state 7

    $default  reduce using rule 2 (value_list)


state 5

    0 $accept: values $end .

    $default  accept


state 6

    3 value_list: value_list SEMICOLON . number_list
    4           | value_list SEMICOLON .

    NUMBER  shift, and go to state 1

    $default  reduce using rule 4 (value_list)

    number_list  go to state 8


state 7

    6 number_list: number_list COMMA . NUMBER
    7            | number_list COMMA .

    NUMBER  shift, and go to state 9

    $default  reduce using rule 7 (number_list)


state 8

    3 value_list: value_list SEMICOLON number_list .
    6 number_list: number_list . COMMA NUMBER
    7            | number_list . COMMA

    COMMA  shift, and go to state 7

    $default  reduce using rule 3 (value_list)


state 9

    6 number_list: number_list COMMA NUMBER .

    $default  reduce using rule 6 (number_list)
